Make changes to menu items, repair PDF

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 #app {
-  font-family: "FF Mark", Helvetica, Arial, sans-serif;
+  font-family: "FF Mark", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
