--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -48,7 +48,9 @@ body {
 }
 
 h1 {
-  font-size: calc(3.5rem + 3vw);
+  font-family: "Freight Text";
+  font-size: calc(8rem + 3vw);
+  font-weight: normal;
   letter-spacing: 1px;
   line-height: 1.1;
   margin: 0 0 10rem;
