--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,7 +22,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  background-color: #faf3dd;
+  background-color: #f5efe1;
   color: #282828;
   position: relative;
 }
