--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,6 +262,7 @@ header h1 {
 .light,
 .dark {
   font-family: var(--sans-serif);
+  font-size: calc(0.8em + 0.1vw);
   text-transform: uppercase;
   position: absolute;
   bottom: 0;
@@ -279,10 +280,10 @@ header h1 {
 .dark::after {
   content: "";
   position: absolute;
-  bottom: 1px;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 3px;
   /* transform: scaleX(0); */
 }
 
