--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,10 +304,15 @@ header h1 {
   color: var(--secondary);
 }
 
-/* Projects */
-.work {
+/* Work */
+#work {
   position: relative;
   padding: 2em 0 0;
+}
+
+#work h4 {
+  margin: 0 auto;
+  width: max-content;
 }
 
 .projects {
@@ -320,7 +325,7 @@ header h1 {
   margin-top: 7vh;
 }
 
-.projects div p {
+.projects div a {
   font-family: var(--serif);
   font-size: calc(1em + 8vw);
   line-height: 1.1;
@@ -328,7 +333,7 @@ header h1 {
   transition: color 0.3s;
 }
 
-.projects div p::before {
+.projects div a::before {
   content: attr(data-number);
   position: relative;
   bottom: 25%;
@@ -338,7 +343,7 @@ header h1 {
   margin-right: 2vw;
 }
 
-.projects div p:hover {
+.projects div a:hover {
   color: var(--secondary);
   cursor: crosshair;
 }
@@ -352,13 +357,13 @@ header h1 {
     margin-top: 0;
   }
 
-  .projects div p {
+  .projects div a {
     margin-top: 4vh;
     text-align: center;
   }
 }
 
-/* Selected Work */
+/* Highlighted Project */
 .selected-work {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -557,90 +562,11 @@ strong {
   }
 }
 
-/* Projects Content */
-.lock {
-  overflow: hidden;
-  padding-right: 17px;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.6s ease;
-}
-
-.close__container {
-  position: fixed;
-  top: 50%;
-  left: 10%;
-  transform: translate(-50%, -50%);
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.5s ease-out;
-  z-index: 3;
-}
-
-.close {
-  position: relative;
-  display: block;
-  width: 80px;
-  height: 80px;
-  border: 2px solid var(--background);
-  border-radius: 50%;
-  cursor: pointer;
-  transition: 0.4s;
-}
-
-.close:hover {
-  transform: scale(1.1);
-}
-
-.close::after,
-.close::before {
-  content: "";
-  position: absolute;
-  width: 40px;
-  height: 2px;
-  background: var(--background);
-  transform: rotate(45deg);
-  border-radius: 4px;
-  top: 37px;
-  left: 18px;
-}
-
-.close::after {
-  transform: rotate(-45deg);
-}
-
-.show {
-  visibility: visible;
-  opacity: 1;
-}
-
+/* Projects */
 .project {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 0;
-  visibility: hidden;
-  background-color: var(--background);
-  z-index: 2;
-  opacity: 1;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  transition: 0.8s cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-.show-project {
-  visibility: visible;
-  width: 80%;
 }
 
 .project__infos {
@@ -670,44 +596,22 @@ strong {
   font-size: calc(1.1em + 0.1vw);
 }
 
-.project__infos div:first-child {
+.project__infos div:first-of-type {
   display: flex;
   justify-content: space-between;
+  margin-top: 5vh;
 }
 
 @media screen and (max-width: 834px) {
-  .lock {
-    padding-right: 0;
-  }
-
   .project {
     grid-template-columns: 1fr;
-    overflow-x: scroll;
-    scrollbar-width: thin;
-  }
-
-  .show-project {
-    width: 100%;
   }
 
   .project div:last-child {
     grid-row: 1;
     min-height: 20vh;
   }
-
-  .close__container {
-    top: 10%;
-  }
 }
-
-@media screen and (max-width: 414px) {
-  .close__container {
-    transform: scale(0.9);
-    top: 5px;
-    left: 5px;
-  }
-}
-
 
 #bm div:last-child {
   background-image: url(https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/61031821_1730262153784065_4670690094456242176_o.jpg?_nc_cat=109&_nc_sid=8024bb&_nc_ohc=-7f2H05lDkIAX9hV_Nk&_nc_ht=scontent-cdg2-1.xx&oh=94d628e2c9c25f45d9e47c65692c714d&oe=5E92A13E);
@@ -725,4 +629,38 @@ strong {
   background-image: url(https://www.lesptitscoquelicots.com/assets/images/photos/exterieur1.jpg);
   background-size: cover;
   background-position: center;
+}
+
+.arrow-left {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(1.5);
+  width: 22px;
+  height: 22px;
+}
+
+.arrow-left::after,
+.arrow-left::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  left: 3px;
+}
+
+.arrow-left::after {
+  width: 8px;
+  height: 8px;
+  border-bottom: 2px solid;
+  border-left: 2px solid;
+  transform: rotate(45deg);
+  bottom: 7px;
+}
+
+.arrow-left::before {
+  width: 16px;
+  height: 2px;
+  bottom: 10px;
+  background: currentColor;
 }
