--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,6 +602,10 @@ strong {
   margin-top: 5vh;
 }
 
+.project div:last-child {
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
 @media screen and (max-width: 834px) {
   .project {
     grid-template-columns: 1fr;
@@ -638,6 +642,11 @@ strong {
   transform: scale(1.5);
   width: 22px;
   height: 22px;
+  transition: color 0.3s;
+}
+
+.arrow-left:hover {
+  color: var(--secondary);
 }
 
 .arrow-left::after,
