--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,8 +117,9 @@ header {
   align-items: center;
 }
 
-header h1 {
+.name {
   color: white;
+  opacity: 0;
 }
 
 .star {
@@ -127,6 +128,7 @@ header h1 {
   left: 25vw;
   width: 42px;
   height: 42px;
+  opacity: 0;
   fill: var(--secondary);
   animation: starAnim 8s linear infinite;
 }
@@ -137,29 +139,6 @@ header h1 {
   }
   to {
     transform: rotate(360deg);
-  }
-}
-
-/* Numbers */
-.numbers {
-  position: absolute;
-  top: 33vh;
-  width: 100vw;
-  display: flex;
-  justify-content: space-around;
-  color: var(--black);
-  opacity: 0.3;
-  pointer-events: none;
-}
-
-.numbers li {
-  font-family: var(--sans-serif);
-  letter-spacing: 0.3em;
-}
-
-@media screen and (max-width: 834px) {
-  .numbers {
-    display: none;
   }
 }
 
@@ -179,6 +158,7 @@ header h1 {
   width: 100%;
   height: 100%;
   opacity: 0.1;
+  transform: scale(0);
 }
 
 @media screen and (max-width: 834px) {
@@ -193,7 +173,7 @@ header h1 {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scaleY(0);
   width: 1px;
   height: 100vh;
   background-color: var(--black);
@@ -204,6 +184,7 @@ header h1 {
   position: absolute;
   top: 65vh;
   left: 0;
+  transform: scaleX(0);
   width: 100vw;
   height: 1px;
   background-color: var(--black);
@@ -213,6 +194,31 @@ header h1 {
 @media screen and (max-width: 834px) {
   .horizontal-line {
     top: 50vh;
+  }
+}
+
+/* Numbers */
+.numbers {
+  position: absolute;
+  top: 33vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  color: var(--black);
+  opacity: 0.3;
+  pointer-events: none;
+}
+
+.numbers li {
+  font-family: var(--sans-serif);
+  letter-spacing: 0.3em;
+  transform: translateY(100%);
+  opacity: 0;
+}
+
+@media screen and (max-width: 834px) {
+  .numbers {
+    display: none;
   }
 }
 
@@ -226,6 +232,8 @@ header h1 {
 .roles li {
   font-size: 1.2em;
   line-height: 1.5;
+  transform: translateY(100%);
+  opacity: 0;
 }
 
 @media screen and (max-width: 834px) {
@@ -245,6 +253,11 @@ header h1 {
   width: calc(10vw + 20em);
   display: flex;
   justify-content: space-around;
+}
+
+.socials li {
+  transform: translateY(100%);
+  opacity: 0;
 }
 
 @media screen and (max-width: 834px) {
