--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,57 +318,36 @@ header {
   padding: 2em 0 0;
 }
 
-.work h4:first-of-type {
+.work h4 {
   margin: 0 auto;
   width: max-content;
 }
 
-.projects {
+.work div {
   padding: 10vh 5vw 20vh;
 }
 
-.projects div {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 7vh;
-}
-
-.projects div a {
+.work a {
+  display: block;
+  margin-top: 4vh;
   font-family: var(--serif);
   font-size: calc(1em + 8vw);
+  font-weight: bold;
   line-height: 1.1;
-  margin: 0;
   transition: color 0.3s;
 }
 
-.projects div a::before {
+.work a::before {
   content: attr(data-number);
-  position: relative;
-  bottom: 25%;
   font-family: var(--sans-serif);
   font-size: calc(1rem + 0.3vw);
   letter-spacing: 0.1em;
   margin-right: 2vw;
 }
 
-.projects div a:hover {
+.work a:hover {
   color: var(--secondary);
   cursor: crosshair;
-}
-
-@media screen and (max-width: 1400px) {
-  .projects div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 0;
-  }
-
-  .projects div a {
-    margin-top: 4vh;
-    text-align: center;
-  }
 }
 
 /* Highlighted Project */
@@ -441,8 +420,9 @@ header {
   left: 0;
   width: 100%;
   height: 25%;
-  background-image: url(https://www.lesptitscoquelicots.com/assets/images/photos/exterieur2.jpg);
+  background-image: url(https://www.lesptitscoquelicots.com/assets/images/photos/exterieur9.jpg);
   background-size: cover;
+  background-position: center;
 }
 
 @media screen and (max-width: 834px) {
