--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: var(--serif);
-  background-color: var(--background);
   color: var(--black);
 }
 
@@ -25,7 +24,7 @@ body {
 }
 
 :root {
-  --background: #f2f2f2;
+  --background: #fff;
   --background2: #dbd5c9;
   --black: #333333;
   --secondary: #f93700;
@@ -41,16 +40,25 @@ ul {
 }
 
 p {
-  font-family: var(--sans-serif);
-  font-size: calc(0.9em + 0.1vw);
+  font-family: var(--serif);
+  font-size: calc(1em + 0.2vw);
   line-height: 1.5;
 }
 
 h1 {
-  font-size: calc(3rem + 8vw);
-  text-align: center;
+  font-size: calc(1em + 5vw);
+  font-weight: normal;
   line-height: 1;
+  opacity: 0;
+  transform: translateY(30px);
   z-index: 1;
+  margin: 0;
+}
+
+h2 {
+  font-size: calc(1.5em + 1vw);
+  font-weight: normal;
+  line-height: 1;
   margin: 0.5em 0;
 }
 
@@ -75,7 +83,7 @@ a {
   overflow: hidden;
 }
 
-.a-link::after {
+.link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -88,33 +96,149 @@ a {
   transition: transform 0.4s ease-out;
 }
 
-.a-link:hover::after {
+.link:hover::after {
   transform: scaleX(0);
   transform-origin: right;
 }
 
-.b-link {
+/* Intro */
+.intro {
+  padding: 20vh 25vw;
+}
+
+.intro p {
+  margin-top: 3em;
+  font-family: var(--serif);
+  z-index: 1;
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.showcase {
+  display: inline-block;
+  width: 100%;
+  height: 60vh;
+}
+
+.showcase img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: inherit;
+  clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+  transition: transform 2s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.showcase img:hover {
+  transform: scale(1.05);
+}
+
+.project-right {
+  padding: 0 3vw 0 25vw;
+}
+
+.project-right div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.project-right p {
+  margin-top: 0;
+}
+
+.project-left {
+  display: grid;
+  grid-template-columns: 1fr 22vw;
+  padding: 0 3vw;
+}
+
+.project-left > div {
+  align-self: end;
+  padding: 0 2em;
+}
+
+.catchphrase {
+  margin: 15vh 25vw;
+}
+
+/* About */
+.about {
+  margin: 10vh 25vw;
+  position: relative;
+}
+
+.about h3 {
+  margin: 0.5em 0;
+}
+
+.about .circle-container {
+  top: 50%;
+  transform: translate(-85%, -50%);
+}
+
+@media screen and (max-width: 1200px) {
+  .project-left {
+    grid-template-columns: 1fr;
+    padding-right: calc(22vw + 2em);
+  }
+
+  .project-left > div {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 748px) {
+  .intro {
+    padding: 20vh 15vw;
+  }
+
+  .project-right {
+    padding-left: 15vw;
+  }
+
+  .project-left {
+    padding-right: 15vw;
+  }
+
+  .catchphrase {
+    margin: 10vh 15vw;
+  }
+
+  .about {
+    margin: 10vh 15vw;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .intro {
+    padding: 20vh 3vw;
+  }
+
+  .project-right {
+    padding-left: 3vw;
+  }
+
+  .project-left {
+    padding-right: 3vw;
+  }
+
+  .catchphrase {
+    margin: 10vh 3vw;
+  }
+
+  .about {
+    margin: 10vh 3vw;
+  }
 }
 
 /* Header */
-header {
-  position: relative;
-  height: 100vh;
-  background-color: var(--background2);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.name {
-  color: white;
-  opacity: 0;
-}
-
 .star {
   position: absolute;
-  top: 20vh;
-  left: 25vw;
+  top: 55vh;
+  left: 70vw;
   width: 42px;
   height: 42px;
   opacity: 0;
@@ -134,7 +258,7 @@ header {
 /* Header Shapes */
 .circle-container {
   position: absolute;
-  top: 50%;
+  top: 50vh;
   left: 50%;
   transform: translate(-95%, -50%);
   height: 45vw;
@@ -186,66 +310,23 @@ header {
   }
 }
 
-/* Numbers */
-.numbers {
-  position: absolute;
-  top: 33vh;
-  width: 100vw;
-  display: flex;
-  justify-content: space-around;
-  color: var(--black);
-  opacity: 0.3;
-  pointer-events: none;
-}
-
-.numbers li {
-  font-family: var(--sans-serif);
-  letter-spacing: 0.3em;
-  transform: translateY(100%);
-  opacity: 0;
-}
-
-@media screen and (max-width: 834px) {
-  .numbers {
-    display: none;
-  }
-}
-
-/* Roles */
-.roles {
-  position: absolute;
-  top: 70vh;
-  left: 70vw;
-}
-
-.roles li {
-  font-size: 1.2em;
-  line-height: 1.5;
-  transform: translateY(100%);
-  opacity: 0;
-}
-
-@media screen and (max-width: 834px) {
-  .roles {
-    left: 45vw;
-  }
-}
-
 /* Socials */
 .socials {
-  font-family: var(--serif);
-  font-size: 1.2em;
+  margin: 0;
   position: absolute;
-  bottom: 2vh;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(10vw + 20em);
+  top: 50vh;
+  left: 3vw;
+  transform: translateY(-50%) rotate(180deg);
+  height: calc(10vh + 15em);
   display: flex;
   justify-content: space-around;
+  writing-mode: vertical-rl;
+  font-family: var(--serif);
+  font-size: 1.2em;
 }
 
 .socials li {
-  transform: translateY(100%);
+  transform: translateX(-100%);
   opacity: 0;
 }
 
@@ -257,227 +338,43 @@ header {
   color: var(--secondary);
 }
 
-@media screen and (max-width: 834px) {
+@media screen and (max-width: 748px) {
   .socials {
+    top: 5vh;
+    left: 50%;
+    transform: translateX(-50%) rotate(0);
+    height: auto;
+    width: calc(10vw + 20em);
+    display: flex;
+    justify-content: space-around;
+    writing-mode: initial;
+  }
+}
+
+.socials-horizontal {
+  margin-top: 20vh;
+  font-family: var(--serif);
+  font-size: 1.2em;
+  position: relative;
+  bottom: 5vh;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(10vw + 20em);
+  display: flex;
+  justify-content: space-around;
+}
+
+.socials-horizontal a {
+  transition: color 0.3s;
+}
+
+.socials-horizontal a:hover {
+  color: var(--secondary);
+}
+
+@media screen and (max-width: 414px) {
+  .socials,
+  .socials-horizontal {
     width: 100%;
   }
-}
-
-/* Work */
-.work {
-  position: relative;
-  padding: 2em 0 0;
-}
-
-.work h4 {
-  margin: 0 auto;
-  width: max-content;
-}
-
-.work div {
-  padding: 10vh 5vw 20vh;
-}
-
-.work a {
-  display: block;
-  margin-top: 4vh;
-  font-family: var(--serif);
-  font-size: calc(1em + 8vw);
-  line-height: 1.1;
-  transition: color 0.3s;
-}
-
-.work a::before {
-  content: attr(data-number);
-  font-family: var(--sans-serif);
-  font-size: calc(1rem + 0.3vw);
-  letter-spacing: 0.1em;
-  margin-right: 2vw;
-}
-
-.work a:hover {
-  color: var(--secondary);
-  cursor: crosshair;
-}
-
-/* Catchphrase */
-.catchphrase {
-  background-color: var(--secondary);
-  color: white;
-  padding: 3vh 10vw;
-}
-
-@media screen and (max-width: 414px) {
-  .catchphrase {
-    padding: 3vh 5vw;
-  }
-}
-
-/* About */
-.about {
-  background-color: var(--background2);
-  padding: 5vh 5vw;
-}
-
-.about div {
-  max-width: 40ch;
-  margin: auto;
-}
-
-/* Contact */
-.contact {
-  position: relative;
-  background-color: var(--background2);
-  padding: 1px 5vw 5vh;
-}
-
-.contact p {
-  font-family: var(--serif);
-  font-size: 8.15vw;
-  line-height: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-strong {
-  font-weight: normal;
-  color: white;
-}
-
-.contact p a {
-  color: var(--secondary);
-}
-
-.contact p a::after {
-  bottom: 0.1em;
-  height: 3px;
-  background-color: var(--secondary);
-}
-
-@media screen and (max-width: 834px) {
-  .contact {
-    padding-bottom: 10vh;
-  }
-
-  .contact p a::after {
-    height: 2px;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .contact p a::after {
-    height: 2px;
-  }
-}
-
-/* Projects */
-.project {
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.project__infos {
-  position: relative;
-  padding: 5vh 3vw;
-}
-
-.project__infos h2 {
-  font-size: calc(3em + 3vw);
-  font-weight: normal;
-  line-height: 1;
-  text-align: center;
-  margin: 10vh 0;
-}
-
-.project__number {
-  position: absolute;
-  bottom: 0;
-  font-family: var(--serif);
-  font-size: calc(2em + 2vw);
-  font-weight: normal;
-  margin: 0.3em 0;
-}
-
-.project__see {
-  margin: 5vh 0 10vh;
-  font-size: calc(1.1em + 0.1vw);
-}
-
-.project__infos div:first-of-type {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5vh;
-}
-
-.project div:last-child {
-  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-}
-
-@media screen and (max-width: 834px) {
-  .project {
-    grid-template-columns: 1fr;
-  }
-
-  .project div:last-child {
-    grid-row: 1;
-    min-height: 20vh;
-  }
-}
-
-#bm div:last-child {
-  background-image: url(https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/61031821_1730262153784065_4670690094456242176_o.jpg?_nc_cat=109&_nc_sid=8024bb&_nc_ohc=-7f2H05lDkIAX9hV_Nk&_nc_ht=scontent-cdg2-1.xx&oh=94d628e2c9c25f45d9e47c65692c714d&oe=5E92A13E);
-  background-size: cover;
-  background-position: center;
-}
-
-#tf div:last-child {
-  background-image: url(https://www.terrefete.com/assets/images/backgrounds/bg-maison.jpg);
-  background-size: cover;
-  background-position: center;
-}
-
-#lpc div:last-child {
-  background-image: url(https://www.lesptitscoquelicots.com/assets/images/photos/exterieur1.jpg);
-  background-size: cover;
-  background-position: center;
-}
-
-.arrow-left {
-  box-sizing: border-box;
-  position: relative;
-  display: block;
-  transform: scale(1.5);
-  width: 22px;
-  height: 22px;
-  transition: color 0.3s;
-}
-
-.arrow-left:hover {
-  color: var(--secondary);
-}
-
-.arrow-left::after,
-.arrow-left::before {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  left: 3px;
-}
-
-.arrow-left::after {
-  width: 8px;
-  height: 8px;
-  border-bottom: 2px solid;
-  border-left: 2px solid;
-  transform: rotate(45deg);
-  bottom: 7px;
-}
-
-.arrow-left::before {
-  width: 16px;
-  height: 2px;
-  bottom: 10px;
-  background: currentColor;
 }
