--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,12 @@ a {
   }
 }
 
+@media screen and (max-width: 414px) {
+  .circle-container {
+    transform: translate(-50%, -80%);
+  }
+}
+
 .vertical-line {
   position: absolute;
   top: 0;
