--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,9 @@ h2 {
   font-size: calc(1em + 2vw);
   font-weight: normal;
   line-height: 1;
+  opacity: 0;
+  transform: translateY(30px);
+  z-index: 1;
   margin: 0.5em 0;
 }
 
