Switch star's color back

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,8 @@ body {
   --background: #fff;
   --background2: #dbd5c9;
   --black: #333333;
-  /* --secondary: #f93700; */
-  --secondary: #42e27f;
+  --secondary: #f93700;
+  /* --secondary: #42e27f; */
   --secondary_alt: #ff501e;
   --serif: tenez, serif;
   --sans-serif: gopher, sans-serif;
