--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ p {
 }
 
 h1 {
-  font-size: calc(1em + 5vw);
+  font-size: calc(1.8em + 4.4vw);
   font-weight: normal;
   line-height: 1;
   opacity: 0;
@@ -119,19 +119,12 @@ a {
 }
 
 /* Nav */
-
-nav * {
-  transform: translateY(30px);
-  opacity: 0;
-  z-index: 1;
-}
-
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5vh 5vw 0;
-  font-size: calc(1em + 0.3vw);
+  font-size: calc(1.2em + 0.2vw);
 }
 
 nav .logo {
@@ -154,6 +147,10 @@ nav ul li,
 
 nav ul li:hover,
 .logo:hover {
+  color: var(--secondary);
+}
+
+.active {
   color: var(--secondary);
 }
 
@@ -186,6 +183,7 @@ nav ul li:hover,
   top: 50%;
   left: 50%;
   transform: translate(-50%, -40%);
+  margin-right: 5vw;
 }
 
 .intro p {
@@ -194,6 +192,7 @@ nav ul li:hover,
   z-index: 1;
   opacity: 0;
   transform: translateY(100%);
+  max-width: 50ch;
 }
 
 @media screen and (max-width: 748px) {
