--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,21 +386,17 @@ nav ul li:hover,
 /* Contact */
 .contact {
   display: grid;
-  grid-template-columns: 40% 1fr;
+  grid-template-columns: 30% 50px 1fr;
   align-items: center;
   margin-top: 15vh;
 }
 
 .contact div:first-child {
-  justify-self: center;
-  display: flex;
-  align-items: center;
+  justify-self: end;
 }
 
-.contact div:first-child::after {
-  content: "";
-  position: relative;
-  left: 3vw;
+.diagonal-line {
+  justify-self: center;
   height: 40vh;
   width: 1px;
   background-color: var(--secondary);
@@ -408,18 +404,22 @@ nav ul li:hover,
 }
 
 .contact div:first-child ul li {
-  font-size: calc(1em + 2vw);
+  font-size: calc(2em + 1vw);
   font-weight: 900;
   font-style: italic;
   color: transparent;
   -webkit-text-stroke: 1px var(--black);
-  transform: translateY(30px);
+  transform: translateY(100%);
   opacity: 0;
   transition: color 0.3s ease;
 }
 
 .contact div:first-child ul li:hover {
   color: var(--black);
+}
+
+.contact div:last-child {
+  justify-self: center;
 }
 
 .contact div:last-child p {
@@ -448,24 +448,29 @@ nav ul li:hover,
     align-self: center;
   }
 
-  .contact div:first-child::after {
-    left: -25vw;
+  .diagonal-line {
+    position: absolute;
+    top: 50%;
+    left: 40%;
     transform: rotate(20deg);
+  }
+
+  .contact div:last-child {
+    margin-bottom: 10vh;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .contact div:first-child ul li {
-    font-size: 10vw;
-  }
-  
-  .contact div:last-child p {
-    font-size: 5vw;
+  .contact {
+    margin-top: 5vh;
   }
 
-  .contact div:first-child::after {
-    left: -50vw;
-    transform: rotate(20deg);
+  .contact div:first-child {
+    margin-bottom: 10vh;
+  }
+
+  .diagonal-line {
+    display: none;
   }
 }
 
@@ -485,7 +490,7 @@ nav ul li:hover,
   width: 100%;
   height: 100%;
   opacity: 0.1;
-  transform: scale(0);
+  /* transform: scale(0); */
 }
 
 @media screen and (max-width: 834px) {
@@ -506,7 +511,7 @@ nav ul li:hover,
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%) scaleY(0);
+  transform: translateX(-50%);
   width: 1px;
   height: 100vh;
   background-color: var(--black);
@@ -517,7 +522,7 @@ nav ul li:hover,
   position: absolute;
   top: 65vh;
   left: 0;
-  transform: scaleX(0);
+  /* transform: scaleX(0); */
   width: 100vw;
   height: 1px;
   background-color: var(--black);
